--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.483.0",
     "motion": "^12.7.2",
     "next": "15.2.3",
+    "next-intl": "^4.0.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
