--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "22.15.3",
+    "@types/react": "19.1.2",
+    "typescript": "5.8.3"
   }
 }
